# pinocchio-tapedrive

./: .gitignore  Cargo.toml
api/: Cargo.toml
api/src/: account.rs  event.rs  lib.rs  loaders.rs  pda.rs  rent.rs  types.rs  utils.rs
api/src/instruction/: mod.rs  tape.rs
api/src/state/: archive.rs  block.rs  epoch.rs  miner.rs  mod.rs  spool.rs  tape.rs  treasury.rs  utils.rs  writer.rs
program/: Cargo.toml
program/src/: entrypoint.rs  error.rs  lib.rs
program/src/api/: mod.rs
program/src/instruction/: mod.rs  utils.rs
program/src/instruction/init/: airdrop.rs  initialize.rs
program/src/instruction/mine/: miner_claim.rs  miner_mine.rs  miner_register.rs  miner_unregister.rs
program/src/instruction/spool/: spool_commit.rs  spool_create.rs  spool_destroy.rs  spool_pack.rs  spool_unpack.rs
program/src/instruction/tape/: tape_create.rs  tape_finalize.rs  tape_set_header.rs  tape_subsidize.rs  tape_update.rs  tape_write.rs
program/src/metadata/: create_metadata_account_v3.rs  data_v2.rs  uses.rs
program/src/state/: accounts.rs  archive.rs  block.rs  constant.rs  epoch.rs  mine.rs  miner.rs  mod.rs  pda.rs  spool.rs  tape.rs  treasury.rs  types.rs  utils.rs  writer.rs
program/src/utils/: account_traits.rs  get_pda.rs  helpers.rs  mod.rs  struct_traits.rs
program/tests/: initialize_complete_test.rs  initialize_test.rs  miner_register_cu_test.rs  miner_unregister_cu_test.rs  spool_commit_cu_test.rs  spool_create_cu_test.rs  spool_pack_cu_test.rs  tape_create_cu_test.rs  tape_create_test.rs  tape_finalize_cu_test.rs  tape_set_header_cu_test.rs  tape_update_cu_test.rs  tape_write_cu_test.rs
program/tests/elfs/: README.md
utils/: Cargo.toml
utils/src/: leaf.rs  lib.rs  slot_hashes.rs  tree.rs  utils.rs
