[package]
name = "pinnochio-tape-program"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Local dependencies
tape-api = { path = "../api" }
utils = { path = "../utils" }

# Workspace dependencies
pinocchio.workspace = true
pinocchio-log.workspace = true
pinocchio-pubkey.workspace = true
pinocchio-system.workspace = true
pinocchio-token.workspace = true
pinocchio-associated-token-account.workspace = true
num_enum.workspace = true
const-crypto.workspace = true
shank.workspace = true
bytemuck.workspace = true
blake3.workspace = true
packx.workspace = true
crankx.workspace = true
brine-tree.workspace = true

[dev-dependencies]
solana-sdk.workspace = true
mollusk-svm.workspace = true
mollusk-svm-bencher.workspace = true

[features]
no-entrypoint = []
std = []
test-default = ["no-entrypoint", "std"]
bench-default = ["no-entrypoint", "std"]

[[bench]]
name = "compute_units"
harness = false

[[test]]
name = "unit_tests"
